OpenShift/pixelgram_oc_object_files/pixelgram-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: __APP_NAME__-dc
  labels:
    app: __APP_NAME__
    version: __VERSION__
spec:
  replicas: __REPLICA__
  template:
    metadata:
      labels:
        app: __APP_NAME__
        updateTimestamp: "__TIMESTAMP__"
        version: __VERSION__
    spec:
      containers:
        - name: __APP_NAME__-ctr
          image: __IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: __PORT__
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1GiB
            requests:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
