OpenShift/pixelgram_oc_object_files/pixelgram-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: __APP_NAME__-route
spec:
  to:
    kind: Service
    name: __APP_NAME__-svc
  port:
    targetPort: __TARGET_PORT__
